--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
         <div class="container">
           <div class="breadcrumb-hero">
             <h2>About Us</h2>
-            <p>Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis. Rerum omnis ipsam aperiam consequatur laboriosam nemo harum praesentium. </p>
+            <pf style="font-size: 20px;">Welcome to this page, we can help you to have good health.  </p>
           </div>
         </div>
       </div>
@@ -150,25 +150,22 @@
 
           <div class="col-lg-6 video-box align-self-baseline">
             <img src="assets/img/25.jpeg" class="img-fluid" alt="">
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+            <a href="https://www.youtube.com/watch?v=j_lRHVcqq_0" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
           </div>
 
           <div class="col-lg-6 pt-3 pt-lg-0 content">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>Here we show you what we do in summary, and the video on one side you click to see what we do.</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Greens beans are good for our health, that is why we continou to produce the best quality of it, you can't be successful without good health.
             </p>
             <ul>
-              <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bx bx-check-double"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bx bx-check-double"></i> Voluptate repellendus pariatur reprehenderit corporis sint.</li>
-              <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="bx bx-check-double"></i> Raw green beans are also a good source of vitamin C.</li>
+              <li><i class="bx bx-check-double"></i> One cup of raw green beans provides 690 IU of Vitamin A, a little less than 15 percent of the daily recommended value.</li>
+              <li><i class="bx bx-check-double"></i> Green beans are a good source of minerals, especially manganese.</li>
+              <li><i class="bx bx-check-double"></i> Vitamin A is important to immune health, reproduction, and healthy vision, this mostly found in green beans.</li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              Green beans may not be the first food that comes to mind as you plan your meals, but with a little ingenuity they can be a tasty, go-to food.
             </p>
           </div>
 
@@ -183,7 +180,7 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Work Process</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Our cooperative we have the technique we use to produce the best quality of green beans, And we care alots about our employee and also we make sure that their have ability to work well.</p>
         </div>
 
         <div class="row content">
@@ -191,14 +188,13 @@
             <img src="assets/img/work-process-1.webp" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-4" data-aos="fade-left">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>Here is how we plan our work and control the haverst we use the same strategies.</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              We have to control everything on time without make any mistake.
             </p>
             <ul>
-              <li><i class="icofont-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="icofont-check"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+              <li><i class="icofont-check"></i> We have to know well the season inorder to control our productivity.</li>
+              <li><i class="icofont-check"></i> We have to control all employee and know if they are working in good condition.</li>
             </ul>
           </div>
         </div>
@@ -208,15 +204,13 @@
             <img src="assets/img/work-process-2.webp" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
-            <h3>Corporis temporibus maiores provident</h3>
+            <h3>How we use our funds to make more productivity.</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              We have part of finance which help us to control all movement of money.
             </p>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+             Here we have to know well where we have to invest our profit, Our have many activity that born becouse of this green beans,
+             what is why we have to control all activity well inorder to achive our aim to be the best all over the world. We work hard becouse of our unlimited objective to produce more green beans with good quality.
             </p>
           </div>
         </div>
@@ -226,12 +220,12 @@
             <img src="assets/img/work-process-3.webp" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5" data-aos="fade-left">
-            <h3>Sunt consequatur ad ut est nulla consectetur reiciendis animi voluptas</h3>
-            <p>Cupiditate placeat cupiditate placeat est ipsam culpa. Delectus quia minima quod. Sunt saepe odit aut quia voluptatem hic voluptas dolor doloremque.</p>
+            <h3>We have teams in our Project, that have to help to achive many thing as well as possible. </h3>
+            <p>Here team have to control activity of the cooperative according to the session the are doing on. They can't involve in the activity which isn't belong to them.</p>
             <ul>
-              <li><i class="icofont-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="icofont-check"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="icofont-check"></i> Facilis ut et voluptatem aperiam. Autem soluta ad fugiat.</li>
+              <li><i class="icofont-check"></i> We have team of accounitng and finance.</li>
+              <li><i class="icofont-check"></i> We have team of haverster in field of green beans.</li>
+              <li><i class="icofont-check"></i> We have team which do marketing and have to attract the customers and partners. This are summary of how team work.</li>
             </ul>
           </div>
         </div>
@@ -241,15 +235,13 @@
             <img src="assets/img/work-process-4.webp" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
-            <h3>Quas et necessitatibus eaque impedit ipsum animi consequatur incidunt in</h3>
+            <h3>Here we have to analyse how we increase or decrease inorder to put more effort we thing are not going well. </h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              This evaluation have to be done in every month, show us how we are working and tell us employees who have worked well they tasks they are given. 
             </p>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+             This also  are helpful to know how we are working on market place. Without evaluation we can not achive all we have done or what we are doing now days.
+             that is why we are going to check every single month how our cooperative are stand. 
             </p>
           </div>
         </div>
@@ -263,22 +255,21 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Our Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>We have all skill required to produce good quality of green beans on this market place, that way we help other to give training and internship.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-right">
-            <img src="assets/img/38.jpg" class="img-fluid" alt="">
+            <img src="assets/img/38.webp" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates</h3>
+            <h3>As you see on this image the skill we have speak itself.</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              There are many skills we use to produce good quality of green beans but this belong are among them.
             </p>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+              site selection is The process of choosing the best location for an anticipated use, Preparation of soil is the first step before growing of crop, It helps to turn the soil and loosen it to allow the roots to penetrate deep into it.
+              Feild design here we prepare the land, free wood and builings.
             </p>
 
             <div class="skills-content">
@@ -325,7 +316,7 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Our Clients</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p style="font-size: 20px;">Our happy clients are here below, we are very happy to work with you, we have aim of taking care to the customers how choose to work with us. </p>
         </div>
 
         <div class="owl-carousel clients-carousel" data-aos="fade-up">
