--- a/Product.html
+++ b/Product.html
@@ -90,7 +90,7 @@
         <div class="container">
           <div class="breadcrumb-hero">
             <h2>Products</h2>
-            <p>Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis. Rerum omnis ipsam aperiam consequatur laboriosam nemo harum praesentium. </p>
+            <p style="font-size: 20px;">  Here are the products/ goods we are producing for our customers. </p>
           </div>
         </div>
       </div>
@@ -137,8 +137,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/27.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>Other Vegetable 4</h4>
+                <p>Other Vegetable</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/28.webp" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
                   <a href="product-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -179,8 +179,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/33.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 2</h4>
-                <p>Web</p>
+                <h4>Green beans 5</h4>
+                <p>Green beans</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/34.webp" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
                   <a href="product-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -235,8 +235,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/28.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>Green Beans 4</h4>
+                <p>Green beans</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/29.webp" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
                   <a href="product-details.html" title="More Details"><i class="bx bx-link"></i></a>
