--- a/services.html
+++ b/services.html
@@ -91,7 +91,7 @@
         <div class="container">
           <div class="breadcrumb-hero">
             <h2>Services</h2>
-            <p>Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis. Rerum omnis ipsam aperiam consequatur laboriosam nemo harum praesentium. </p>
+            <p style="font-size: 20px;"> Please we are here to help you and give you the best services as we can. we will never let you down.  </p>
           </div>
         </div>
       </div>
@@ -110,46 +110,46 @@
         <div class="row">
           <div class="col-md-6">
             <div class="icon-box" data-aos="fade-up">
-              <div class="icon"><i class="las la-basketball-ball" style="color: #16b047; padding-left: 25px;"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <div class="icon"><i class="las la-basketball-ball" style="color: #16b947;  padding-left: 25px;"></i></div>
+              <h4 class="title"><a href="">Training</a></h4>
+              <p class="description">We give the training for student who want to increase the level of knowledge, and also for employee of other cooperative.  </p>
             </div>
           </div>
           <div class="col-md-6">
             <div class="icon-box" data-aos="fade-up">
-              <div class="icon"><i class="las la-book" style="color: #16b047; padding-left: 25px;"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <div class="icon"><i class="las la-book" style="color: #16b947;  padding-left: 25px;"></i></div>
+              <h4 class="title"><a href="">Investment</a></h4>
+              <p class="description"> We instest fund to help other small business ideas, and other events which is helpful to increase our development.</p>
             </div>
           </div>
 
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="las la-file-alt" style="color: #16b047; padding-left: 25px;"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <div class="icon"><i class="las la-file-alt" style="color: #16b947;  padding-left: 25px;"></i></div>
+              <h4 class="title"><a href="">School</a></h4>
+              <p class="description"> We build school to help those who doesn't have ability to afford thier education levels of skills thier want.</p>
             </div>
           </div>
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="las la-tachometer-alt" style="color:#16b047; padding-left: 25px;"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <div class="icon"><i class="las la-tachometer-alt" style="color:#16b947;  padding-left: 25px;"></i></div>
+              <h4 class="title"><a href="">Hospital</a></h4>
+              <p class="description"> We build the clinic that help our employee to have good health condition, generally for all people who want our services.</p>
             </div>
           </div>
 
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="las la-globe-americas" style="color: #16b047; padding-left: 25px;"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <div class="icon"><i class="las la-globe-americas" style="color: #16b947;  padding-left: 25px;"></i></div>
+              <h4 class="title"><a href="">Jobs</a></h4>
+              <p class="description">We give the biggest opportunities to those freelancers, very week we provide job new people that is our biggest services.</p>
             </div>
           </div>
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="las la-clock" style="color: #16b047;  padding-left: 25px;"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <div class="icon"><i class="las la-clock" style="color: #16b947;  padding-left: 25px;"></i></div>
+              <h4 class="title"><a href="">Interneship</a></h4>
+              <p class="description">We collaborate with same institution who have people need to know what we are doing and help them to have skills.</p>
             </div>
           </div>
         </div>
@@ -163,7 +163,7 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Features</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p style="font-size: 20px;">Here we tell you about us in the way of showing the some mission,plan,vision and care we have in this journey of producing good quality of green beans.</p>
         </div>
 
         <div class="row">
@@ -171,7 +171,7 @@
             <div class="card" style="background-image: url(assets/img/26.webp);">
               <div class="card-body">
                 <h5 class="card-title"><a href="">Our Mission</a></h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua.</p>
+                <p class="card-text">We have the mission of bieng the best in producing good quality of green beans all over the world and our team we believe it.</p>
                 <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Read More</a></div>
               </div>
             </div>
@@ -180,7 +180,7 @@
             <div class="card" style="background-image: url(assets/img/27.webp);">
               <div class="card-body">
                 <h5 class="card-title"><a href="">Our Plan</a></h5>
-                <p class="card-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem doloremque laudantium, totam rem.</p>
+                <p class="card-text">We are plannig to continue to growing up, and to open other branches in other areas. Decreasing is our best enemy in our aim we have that's why we keep giving you best services.  </p>
                 <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Read More</a></div>
               </div>
             </div>
@@ -190,7 +190,7 @@
             <div class="card" style="background-image: url(assets/img/28.webp);">
               <div class="card-body">
                 <h5 class="card-title"><a href="">Our Vision</a></h5>
-                <p class="card-text">Nemo enim ipsam voluptatem quia voluptas sit aut odit aut fugit, sed quia magni dolores.</p>
+                <p class="card-text">Our vision is to be the first in development of our country. To help each other and make strength in this career, where everybody have good health becouse of presence of good vegetable.</p>
                 <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Read More</a></div>
               </div>
             </div>
@@ -199,7 +199,7 @@
             <div class="card" style="background-image: url(assets/img/29.webp);">
               <div class="card-body">
                 <h5 class="card-title"><a href="">Our Care</a></h5>
-                <p class="card-text">Nostrum eum sed et autem dolorum perspiciatis. Magni porro quisquam laudantium voluptatem.</p>
+                <p class="card-text">We care alots about what we do and also our client, without we can't be here now that's why we care a lot.</p>
                 <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Read More</a></div>
               </div>
             </div>
