--- a/Contact us.html
+++ b/Contact us.html
@@ -90,7 +90,7 @@
         <div class="container">
           <div class="breadcrumb-hero">
             <h2>Contact</h2>
-            <p>Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis. Rerum omnis ipsam aperiam consequatur laboriosam nemo harum praesentium. </p>
+            <p style="font-size: 20px;">Here you can contact us, we are going to help you for any service you want in that we serve for you. </p>
           </div>
         </div>
       </div>
