--- a/product-details.html
+++ b/product-details.html
@@ -90,7 +90,7 @@
         <div class="container">
           <div class="breadcrumb-hero">
             <h2>Product Details</h2>
-            <p>Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis. Rerum omnis ipsam aperiam consequatur laboriosam nemo harum praesentium. </p>
+            <p style="font-size: 20px;"> Here we give you in details some information about our product of Green beans and also other vegetables. </p>
           </div>
         </div>
       </div>
@@ -119,7 +119,7 @@
             <ul>
               <li><strong>Category</strong>: A</li>
               <li><strong>Client</strong>: Hotels,Restaurant and other many customers</li>
-              <li><strong>Start date</strong>: 01 March, 2020</li>
+              <li><strong>Start date</strong>: 01 March, 2008</li>
               <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
             </ul>
           </div>
@@ -129,7 +129,9 @@
         <div class="portfolio-description">
           <h2>This is an example of product detail</h2>
           <p>
-            Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+            In general green beans are good for our health, that's why we put our effort to produce it, we help many people who love this food.
+            There is some advantage of green beans for our body, are follow. Green beans are a good source of minerals, especially manganese,
+            Vitamin A is important to immune health, reproduction, and healthy vision, this mostly found in green beans.
           </p>
         </div>
 
